--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-
-    <script defer src="scripts/calendar.js"></script>
-    <script defer src="scripts/script.js"></script>
-    <script defer src="scripts/clockDate.js"></script>
-    <script defer src="scripts/todo.js"></script>
+    
+    <script src="scripts/calendar.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/clockDate.js"></script>
+    <script src="scripts/todo.js"></script>
     <script src="scripts/holidayAPI.js"></script>
+    <script defer src="./scripts/main.js"></script>
     <script
       defer
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
