Added white color for date and clock

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <div class="logo-clock-todo">
                     <div class="logo">
                         <img src="https://www.pngrepo.com/png/29731/180/sunny.png" style="width: 30%" alt="" />
-                        <h5 id="todaysDate"></h5>
+                        <h5 class="date" id="todaysDate"></h5>
                     </div>
                     <div class="clock">
                         <div class="col-4"></div>
                         <div class="col-4"></div>
                         <div class="col-4">
-                            <h5 id="clock"></h5>
+                            <h5 class="clock" id="clock"></h5>
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
 
                 <!-- Start todo-section -->
                 <div class="bg-light border-right sidebar" id="sidebar-wrapper">
-                    <ul class="list-group list-group-flush overflow-auto">
+                    <ul class="list-group list-group-flush overflow-auto sidebar">
 
                         <div class="mobile-month-year-btns">
                             <div class="month-Btn hidden-for-bs" id="last-day">
