--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <!-- Start todo-section -->
                 <div class="bg-light border-right sidebar" id="sidebar-wrapper">
-                    <ul class="list-group list-group-flush overflow-auto sidebar">
+                    <ul class="list-group list-group-flush overflow-auto">
 
                         <div class="mobile-month-year-btns">
                             <div class="month-Btn hidden-for-bs" id="last-day">
