removed incorrect styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!-- End logo, date, clock -->
 
                 <!-- Start todo-section -->
-                <div class="bg-light border-right sidebar" id="sidebar-wrapper">
+                <div class="border-right sidebar" id="sidebar-wrapper">
                     <ul class="list-group list-group-flush overflow-auto">
 
                         <div class="mobile-month-year-btns">
