changed name on label class

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <!-- Start display-form -->
                             <form class="display-form" name="add" id="add-todo">
                                 <div class="labelInput">
-                                    <label class="label"><h6 class="h6">Todo:</h6>
+                                    <label class="label1"><h6 class="h6">Todo:</h6>
                       <input
                         type="text"
                         name="todo"
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="divStartEnd2">
                                     <div class="divStartEnd3">
-                                        <label class="label"><h6 class="h6">Startar:</h6>
+                                        <label class="label1"><h6 class="h6">Startar:</h6>
                         <input
                           class="startTid"
                           type="time"
@@ -103,7 +103,7 @@
                           required
                         />
                       </label>
-                                        <label class="label"><h6 class="h6">Slutar:</h6>
+                                        <label class="label1"><h6 class="h6">Slutar:</h6>
                         <input
                           class="slutTid"
                           type="time"
@@ -137,7 +137,7 @@
                       />
                     </label>
                                     <div class="start-end">
-                        <label class="label">
+                        <label class="label1">
                             <h6 class="h6">Startar:</h6>
                         <input
                           class="startTid"
@@ -149,7 +149,7 @@
                           required
                         />
                       </label>
-                                <label class="label">
+                                <label class="label1">
                                     <h6 class="h6">Slutar:</h6>
                         <input
                           class="slutTid"
